tests/compile_fail/invalid_lit_number.rs
use better_cstr::c;

fn main() {
    c!(1);
}
