tests/compile_fail/invalid_lit_number.stderr
error: Unsupported literal kind
 --> tests/compile_fail/invalid_lit_number.rs:4:8
  |
4 |     c!(1);
  |        ^
